[gd_scene load_steps=2 format=2]

[ext_resource path="res://Terminal.gd" type="Script" id=1]

[node name="Terminal" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_right = 1024.0
margin_bottom = 282.0
size_flags_vertical = 3

[node name="Viewport" type="MarginContainer" parent="HSplitContainer"]
margin_right = 506.0
margin_bottom = 282.0
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="HSplitContainer/Viewport"]
margin_right = 506.0
margin_bottom = 282.0

[node name="Logs" type="MarginContainer" parent="HSplitContainer"]
margin_left = 518.0
margin_right = 1024.0
margin_bottom = 282.0
size_flags_horizontal = 3

[node name="VScrollBar" type="VScrollBar" parent="HSplitContainer/Logs"]
margin_right = 506.0
margin_bottom = 282.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/Logs/VScrollBar"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_top = 286.0
margin_right = 1024.0
margin_bottom = 314.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 21.0

[node name="HullValue" type="Label" parent="PanelContainer/HBoxContainer"]
margin_right = 334.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="EnergyValue" type="Label" parent="PanelContainer/HBoxContainer"]
margin_left = 338.0
margin_right = 672.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="CreditsValue" type="Label" parent="PanelContainer/HBoxContainer"]
margin_left = 676.0
margin_right = 1010.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="."]
margin_top = 318.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
